# cli

./: Cargo.toml  README.md
.github/: settings.yml
src/: api.rs  cli.rs  main.rs  utils.rs
