[package]
name = "tiki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive", "env"] }
jsonwebtoken = "9.2.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["tracing", "full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
